# BilbyTestingRidealong

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
src/: Sampler_Benchmarking.py
src/BilbyRidealong.egg-info/: PKG-INFO
src/bilby_extras/: __init__.py  sampler_benchmarking.py  scattering_inference.py
