[metadata]
name = BilbyRidealong
version = 0.0.1
author = Richard Udall
author_email = rudall@caltech.edu
description = "Scripts for testing Bilby, which don't belong in the codebase"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Richard14916/BilbyTestingRidealong
project_urls =
    Bug Tracker = https://github.com/Richard14916/BilbyTestingRidealong/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    benchmark_sampler = bilby_extras:run_benchmark_sampler
    scattering_setup = bilby_extras:scattering_setup_job
    scattering_run = bilby_extras:scattering_run_job

[flake8]
exclude = .git, docs, build, dist, test, *__init__.py, calibration
max-line-length = 120
ignore = F401, W503

[tool:pytest]
addopts = -p no:warnings
